# photpGallary

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
assets/: file_upload.css  out.css  tailwind.css
data/: db.sqlite-shm
src/: app.rs  lib.rs  main.rs
src/backend/: db.rs  mod.rs  model.rs  server_backend.rs
src/components/: hero.rs  mod.rs  navigation.rs
src/pages/: gallary.rs  index.rs  kalkidan.rs  mod.rs  religious_rituals.rs  uploader.rs  uploader_inteface.rs  we_celeb.rs  we_mesk.rs
